// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UOCTET.proto";
import "./Pus003Packet.proto";


package pusGroundModel.protobuf;

message Pus003HkPacket {
extensions 5 to 105;

  optional ccsds_mal.protobuf.UOCTET generationMode = 1;
  optional pusGroundModel.protobuf.Pus003Packet pus003Packet = 2;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeGenMode = 3;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeGenMode = 4;
}
